# zyncoder

./: CMakeLists.txt  README.md  __init__.py  build.sh  gpiod_callback.c  gpiod_callback.h  lm4811.c  lm4811.h  lm4811_set_volume.c  mcp4728_set_address.c  test_gpio.c  tpa6130.c  tpa6130.h  tpa6130_set_volume.c  wiringPi.h  wiringPiEmu.c  wiringPiEmu.h  wiringPiI2C.c  wiringPiI2C.h  z2_test.c  zynads1115.c  zynads1115.h  zynaptik.c  zynaptik.h  zyncoder.c  zyncoder.h  zyncoder.kdev4  zyncoder.py  zyncoder_i2c.c  zyncoder_i2c.h  zyncoder_test.c  zyncontrol.c  zyncontrol.h  zyncontrol_i2c.c  zyncontrol_mini_v2.c  zyncontrol_v5.c  zyncontrol_vx.c  zyncontrol_z2.c  zyncore.c  zyncore.py  (+17 more)
.kdev4/: _custom.kdev4  zyncoder.kdev4
